<resources>
    <string name="app_name">Calculadora</string>
    <string name="calculator">Calculadora</string>
    <string name="submit">Submeter</string>
    <string name="cancel">Cancelar</string>
    <string name="history">Histórico</string>
    <string name="drawer_open">Aberto</string>
    <string name="drawer_close">Fechado</string>
    <string name="button_equals">=</string>
    <string name="button_adition">+</string>
    <string name="button_2">2</string>
    <string name="button_1">1</string>
    <string name="button_3">3</string>
    <string name="button_mulitplication">*</string>
    <string name="button_dot">.</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_clear">C</string>
    <string name="button_backspace">></string>
    <string name="button_0">0</string>
    <string name="button_subtract">-</string>
    <string name="button_division">/</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>
    <string name="button_7">7</string>
    <string name="button_00">00</string>
    <string name="expression">Expressão:</string>
    <string name="result">Resultado:</string>
    <string name="creationDate">Data de criação:</string>
    <string name="uuid">UUID</string>
    <string name="deleting">A eliminar...</string>
    <string name="registry_saved">Registo guardado</string>
    <string name="no_history_available">Sem histórico disponível</string>
</resources>